[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "screenshotone"
version = "0.0.1"
authors = [
  { name="Dmytro Krasun", email="support@screenshotone.com" },
]
description = "A Python SDK for ScreenshotOne.com API to take screenshots of URLs, render HTML as images and PDF"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
[project.urls]
"Homepage" = "https://screenshotone.com/"
"Docs" = "https://screenshotone.com/docs/getting-started/"